# todo-aggregator

./: .env.example  .gitignore  Dockerfile  GCP_MIGRATION_PLAN.md  PHASE1_SETUP.md  PHASE2_COMPLETE.md  PHASE2_SETUP.md  PHASE3_SETUP.md  PHASE4_COMPLETE.md  PHASE4_SETUP.md  PHASE5_SETUP.md  PHASE6_SETUP.md  README.md  google_auth_setup.md  implementation.md  pyproject.toml  requirements.txt
.github/workflows/: todo-aggregator.yml  todo-aggregator.yml.disabled
api/: app.py
api/static/: register.html  style.css
scripts/: compare_slack_approaches.py  gmail_oauth_setup.py
scripts/slack_workflows/: README.md
src/: __init__.py  config.py  orchestrator.py
src/gcp/: __init__.py  firestore_client.py  secret_manager.py
src/mcp_clients/: __init__.py  gmail_client.py  notion_client.py  slack_client.py  zoom_client.py
src/notifications/: __init__.py  email_sender.py  templates.py
src/outputs/: __init__.py
src/processors/: __init__.py  claude_processor.py
tests/: complete_phase2_test.py  test_gmail_connection.py  test_phase1.py  test_phase2_mock.py  test_phase2_real.py  test_phase5.py  test_slack_connection.py  test_with_sample_data.py  test_zoom_connection.py  test_zoom_detailed.py  test_zoom_summaries.py
